Also run test and assembleAndroidTest as part of presubmit

--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -146,12 +146,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
@@ -202,12 +202,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
@@ -258,12 +258,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
@@ -314,12 +314,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
@@ -370,12 +370,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
@@ -426,12 +426,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
@@ -482,12 +482,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
@@ -538,12 +538,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
@@ -612,12 +612,12 @@ jobs:
           set -x
           echo "DIST_DIR=$HOME/dist" >> $GITHUB_ENV
 
-      - name: "./gradlew buildOnServer"
+      - name: "./gradlew buildOnServer test assembleAndroidTest"
         uses: eskatos/gradle-command-action@v1
         env:
           JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         with:
-          arguments: buildOnServer ${{ needs.setup.outputs.gradlew_flags }}
+          arguments: buildOnServer test assembleAndroidTest ${{ needs.setup.outputs.gradlew_flags }}
           build-root-directory: ${{ env.project-root }}
           configuration-cache-enabled: true
           dependencies-cache-enabled: true
